--- a/web/mewld-ui/src/css/global.scss
+++ b/web/mewld-ui/src/css/global.scss
@@ -81,3 +81,9 @@ button:hover {
 .active {
     display: initial !important;
 }
+
+code {
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 12px;
+    word-wrap: break-word;
+}
